<resources>
    <string name="app_name">Weight Tracker</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in_with_email">Sign In with Email</string>
    <string name="sign_up_with_google">Sign Up with Google</string>

    <string name="auto_sign_in_messsage">Welcome back, %1$s!</string>
    <string name="sign_in_messsage">Hello, %1$s!</string>

    <string name="google_web_client_id">1051522951963-9ca8ci5lumfs1grir1o76ibp8n5v4ngh.apps.googleusercontent.com</string>
    <string name="good_morning">Good morning!</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_evening">Good evening!</string>
    <string name="enter_weight">Enter your weight for today</string>
    <string name="weight_today">Your weight for today: %1$s lbs</string>
    <string name="enter_your_weight_on">Enter your weight on %1$s</string>
    <string name="hint_enter_weight">Enter weight</string>
    <string name="lbs">lbs</string>
    <string name="update">Update weight</string>
    <string name="generate_test_data">Generate test data</string>
    <string name="sign_out">Sign out</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="no_data_to_show">No Data to show</string>

    <string name="a11y_setting_button">Setting Button</string>
    <string name="a11y_back_button">Back Button</string>
    <string name="a11y_expand_graph">Expand graph - View Full</string>
    <string name="a11y_go_to_first_page">Go to first page</string>
    <string name="a11y_go_to_previous_page">Go to previous page</string>
    <string name="a11y_go_to_last_page">Go to last page</string>
    <string name="a11y_go_to_next_page">Go to next page</string>
    <string name="a11y_switch_graph_list">Switch to Graph / Switch to List</string>
    <string name="x_lbs">%1$s lbs</string>
    <string name="on_y">on %1$s</string>
    <string name="chat_with_your_health_coach">Chat with your health coach</string>
    <string name="send_message">Send Message</string>
    <string name="hint_type_a_message">Type a message</string>
    <string name="send_graph_to_my_coach">Send graph to my coach</string>
    <string name="a11y_custom_image">Custom Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>

</resources>