<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/applicationBackground">

    <TextView
        android:id="@+id/wishingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_80sdp"
        style="?customTextTextL"
        android:textColor="@color/primaryTextColor"
        android:text="@string/good_evening"
        android:gravity="center"/>

    <TextView
        android:id="@+id/enterWeight"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishingText"
        android:layout_marginTop="@dimen/_18sdp"
        style="?customTextButtonS"
        android:textColor="@color/cta_text_selector"
        android:text="@string/enter_weight"
        android:gravity="center"
        android:paddingHorizontal="36dp"
        android:background="@drawable/bg_cta_button"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/weightToday"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishingText"
        android:layout_marginTop="@dimen/_18sdp"
        style="?customTextTextS"
        android:textColor="@color/primaryTextColor"
        android:text="@string/weight_today"
        android:gravity="center"
        android:paddingHorizontal="36dp"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="enterWeight,weightToday"
        app:barrierDirection="bottom"/>

    <ImageView
        android:id="@+id/expandGraph"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toTopOf="@id/lineGraph"
        app:layout_constraintEnd_toEndOf="@id/lineGraph"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/ic_expand"
        android:scaleType="center"
        android:visibility="invisible"
        android:contentDescription="@string/a11y_expand_graph"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineGraph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_min="@dimen/_250sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expandGraph"
        android:layout_marginHorizontal="@dimen/_24sdp"/>

    <TextView
        android:id="@+id/no_data_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/lineGraph"
        app:layout_constraintBottom_toBottomOf="@id/lineGraph"
        app:layout_constraintStart_toStartOf="@id/lineGraph"
        app:layout_constraintEnd_toEndOf="@id/lineGraph"
        android:text="@string/no_data_to_show"
        style="?customTextTextS"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/sendGraphToCoach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/chatWithYourHealthCoach"
        app:layout_constraintTop_toTopOf="@id/chatWithYourHealthCoach"
        app:layout_constraintBottom_toBottomOf="@id/chatWithYourHealthCoach"
        android:text="@string/send_graph_to_my_coach"
        android:background="@drawable/bg_cta_button_v2"
        android:textColor="@color/white"
        style="?customTextButtonXS"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_24sdp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/chatWithYourHealthCoach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:src="@drawable/ic_chat"
        app:tint="@color/white"
        android:contentDescription="@string/chat_with_your_health_coach"
        />

    <include layout="@layout/fullscreen_blocking_loading"/>

</androidx.constraintlayout.widget.ConstraintLayout>