<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/enterWeightTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_80sdp"
        style="?customTextTextL"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:text="@string/enter_your_weight_on"
        />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/edit_text_bg"
        android:cursorVisible="true"
        android:hint="@string/hint_enter_weight"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@id/enterWeightTitle"
        app:layout_constraintTop_toBottomOf="@id/enterWeightTitle"
        android:padding="4dp"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbs"
        app:layout_constraintStart_toEndOf="@id/weightInput"
        app:layout_constraintTop_toTopOf="@id/weightInput"
        app:layout_constraintBottom_toBottomOf="@id/weightInput"
        android:layout_marginStart="@dimen/_8sdp"
        android:textColor="@color/primaryTextColor"
        style="?customTextTextXS"/>

    <TextView
        android:id="@+id/updateCTA"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_80sdp"
        style="?customTextButtonS"
        android:textColor="@color/cta_text_selector"
        android:text="@string/update"
        android:gravity="center"
        android:paddingHorizontal="36dp"
        android:background="@drawable/cta_button_bg"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>