<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/switchGraphAndList"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_show_list"
        android:contentDescription="@string/a11y_switch_graph_list"
        android:padding="@dimen/_4sdp"
        android:layout_margin="@dimen/_6sdp"
        app:tint="@color/primaryTextColor"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_24sdp"
        />

    <LinearLayout
        android:id="@+id/graphNavigationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/switchGraphAndList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_24sdp">
        <ImageView
            android:id="@+id/goToFirstPage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_first_page"
            android:contentDescription="@string/a11y_go_to_first_page"
            android:padding="@dimen/_4sdp"
            android:layout_margin="@dimen/_6sdp"
            app:tint="@color/primaryTextColor"
            android:visibility="gone"
            />
        <ImageView
            android:id="@+id/goToPreviousPage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_chevron_left"
            android:contentDescription="@string/a11y_go_to_previous_page"
            android:padding="@dimen/_4sdp"
            android:layout_margin="@dimen/_6sdp"
            app:tint="@color/primaryTextColor"
            />
        <ImageView
            android:id="@+id/goToNextPage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_chevron_right"
            android:contentDescription="@string/a11y_go_to_next_page"
            android:padding="@dimen/_4sdp"
            android:layout_margin="@dimen/_6sdp"
            app:tint="@color/primaryTextColor"
            />
        <ImageView
            android:id="@+id/goToLastPage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_last_page"
            android:contentDescription="@string/a11y_go_to_last_page"
            android:padding="@dimen/_4sdp"
            android:layout_margin="@dimen/_6sdp"
            app:tint="@color/primaryTextColor"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/weekDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/graphNavigationLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="6/13/22 - 6/19/22"
        style="?customTextTextL"
        android:textColor="@color/primaryTextColor"
        android:layout_marginTop="@dimen/_16sdp"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineGraph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_min="@dimen/_250sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weekDetails"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_24sdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/switchGraphAndList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_24sdp"
        android:visibility="gone"/>

    <include layout="@layout/fullscreen_blocking_loading"/>

</androidx.constraintlayout.widget.ConstraintLayout>